# reaction-test

./: README.md  docker-compose.yml  reaction-test.cabal  stack.yaml
scripts/: build  exec
src/lib/: ReactionTest.hs
src/lib/ReactionTest/: IOInterface.hs
src/reaction-test/: Main.hs
