name:                reaction-test
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/reaction-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:   src/lib
  ghc-options:      -Wall
  default-language: Haskell2010
  exposed-modules:
      ReactionTest
  default-extensions:
      OverloadedStrings LambdaCase
      StandaloneDeriving FlexibleContexts ScopedTypeVariables
      KindSignatures DataKinds GADTs
  build-depends:
      base,
      reactive-banana,
      random,
      time
      -- basic-prelude,
      -- string-conversions,
      -- transformers,
      -- mtl,
      -- monad-control,
      -- resourcet,

executable reaction-test
  hs-source-dirs:   src/reaction-test
  ghc-options:      -Wall
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:    base, reaction-test
  default-extensions:
      OverloadedStrings LambdaCase
      StandaloneDeriving FlexibleContexts ScopedTypeVariables
      KindSignatures DataKinds GADTs
